<resources>
    <string name="app_name">TTRPGTracker</string>
    <string name="configure_encounter_title">Select Participants</string>
    <string name="enter_initiative_title">Enter Initiative</string>
    <string name="roll_dice_title">Shake to Roll Dice</string>
    <string name="register_new_user_title"></string>
    <string name="create_custom_npc_title">Create Custom NPC</string>
    <string name="edit_custom_npc_title">Edit Custom NPC</string>
    <string name="edit_party_title">Edit Party</string>
    <string name="create_party_title">Create Party</string>
    <string name="add_new_party_title">Add New Party</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help_and_feedback">Help &amp; Feedback</string>

    <string name="menu_encounters">Encounters</string>
    <string name="menu_parties">Parties</string>
    <string name="menu_npcs">NPC\'s</string>
    <string name="menu_rolldice">Roll Dice</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_create_party">CreatePartyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
